Travis update: May 2025 (Build 842)
[skip ci]
